2007-09-04  Stef Walter  <stef@memberwebs.com>

	* src/seahorse-gkeyring-item.c: Fix problem when building without
	SSH support. 

2007-09-04  Alessio Frusciante  <algol@firenze.linux.it>

	* plugins/applet/docs/Makefile.am: Added "it" (Italian) to
	DOC_LINGUAS.  
	* plugins/applet/docs/it/it.po: Addded Italian
	translation by Milo Casagrande <milo_casagrande@yahoo.it>.

2007-08-26  Daniel Nylander <po@danielnylander.se>

	* plugins/applet/docs/sv/sv.po: Updated Swedish translation

2007-08-26  Stef Walter  <stef@memberwebs.com>

	* configure.in: Bump version number
	
=== seahorse-2.19.91 ===

2007-08-26  Stef Walter  <stef@memberwebs.com>

    * NEWS:
    * README: Release 2.19.91

2007-08-22  Stef Walter  <stef@memberwebs.com>

	* libseahorse/seahorse-prefs.glade: Remove needlessly translated strings.
	Patch by Claude Paroz. Fixes bug #469176

2007-08-21  Stef Walter  <stef@memberwebs.com>

    * agent/seahorse-agent-actions.c:
    * agent/seahorse-agent-cache.c: Fix badly placed semi-colons which 
    shortcircuit if()s. Patch by  Dave Jones. Fixes bug #467485
    
2007-08-21  Stef Walter  <stef@memberwebs.com>

    * src/seahorse-gkeyring-item.c: Properly escape any markup characters in 
    a gnome-keyring item name. Fixes bug #453188
    
2007-08-21  Stef Walter  <stef@memberwebs.com>

    * src/seahorse-key-properties.c: Remove assertions in UI code that we 
    really don't guarantee. Fixes bug #453152

2007-08-20  Stef Walter  <stef@memberwebs.com>

    * libseahorse/seahorse-progress.glade: Progress operations now show up in 
    the task list properly. Fixes bug #445767
    
2007-08-20  Stef Walter  <stef@memberwebs.com>

    * data/seahorse.schemas.in: Hide agent try icon by default.
    Fixes bug #432891
    
2007-08-12  Stef Walter  <stef@memberwebs.com>

    * configure.in: Bump version

=== seahorse-2.19.90 ===

2007-08-12  Stef Walter  <stef@memberwebs.com>

    * configure.in:
    * NEWS:
    * README: Release 2.19.90
