@@ -1,3 +1,8 @@
+2007-09-06  Adam Schreiber  <sadam@clemson.edu>
+
+    * libseahorse/seahorse-prefs.c: Connect auto retreive check box to
+    gconf.  Fixes bug #473940 
+
 2007-09-04  Stef Walter  <stef@memberwebs.com>
 
 	* src/seahorse-gkeyring-item.c: Fix problem when building without
